optimus performance, fix logic bug, add add book with ibsn, optimush catch error