@@ -3,15 +3,21 @@ package googleAPI;
 import java.io.InputStreamReader;
 import java.io.BufferedReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
+
+
+import model.Document;
+
 import java.text.Normalizer;
 import java.util.regex.Pattern;
 import util.*;
+import javafx.util.Pair;
 
 public class GoogleApiBookController {
 
@@ -33,7 +39,8 @@ public class GoogleApiBookController {
     private static boolean checkConnection() {
         try {
             String testQuery = API_URL + "test" + "&key=" + API_KEY;
-            URL url = new URL(testQuery);
+            URI uri = new URI(testQuery);
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             int responseCode = connection.getResponseCode();
@@ -64,79 +71,36 @@ public class GoogleApiBookController {
     }
 
     
-    public static BookInfo getBookInfoByNoTruly (String bookTitle) {
-        
-        if (!isValidInput(bookTitle)) {
-            return new BookInfo("Invalid input: Book title is required.", null, null);
-        }
-        if (!checkConnection()) {
-            return new BookInfo("Connection error: Unable to connect to the server.", null, null);
-        }
-
-        try {
-            String normalizedTitle = removeVietnameseAccents(bookTitle);
-            String query = API_URL + "intitle:" + normalizedTitle.replace(" ", "+") + "&key=" + API_KEY;
-            URL url = new URL(query);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-
-            BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-            StringBuilder response = new StringBuilder();
-            String line;
-
-            while ((line = reader.readLine()) != null) {
-                response.append(line);
-            }
-            reader.close();
-
-            JsonObject jsonResponse = JsonParser.parseString(response.toString()).getAsJsonObject();
-            JsonArray items = jsonResponse.getAsJsonArray("items");
-
-            if (items.size() > 0) {
-                
-                String description = "";
-                JsonObject volumeInfo = items.get(0).getAsJsonObject().getAsJsonObject("volumeInfo");
-                description += volumeInfo.has("description") ? volumeInfo.get("description").getAsString() : "No description found.";
-                Double averageRating = volumeInfo.has("averageRating") ? volumeInfo.get("averageRating").getAsDouble() : null;
-                String rating = averageRating != null ? "Average Rating: " + averageRating : "No rating found.";
-                String imageUrl = volumeInfo.has("imageLinks") ? volumeInfo.getAsJsonObject("imageLinks").get("thumbnail").getAsString() : "No image found.";
-                return new BookInfo(description, rating, imageUrl, false);
-            } else {
-                return new BookInfo("No description found.", null, null);
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
-            return new BookInfo("Error occurred while fetching the book information.", null, null);
-        }
-    }
+    
 
 
     
     public static BookInfo getBookInfo(String bookTitle) {
         if (!isValidInput(bookTitle)) {
-            return new BookInfo("Invalid input: Book title is required.", null, null);
+            return new BookInfo("Invalid input: Book title is required.", null, null, null);
         }
         if (!checkConnection()) {
-            return new BookInfo("Connection error: Unable to connect to the server.", null, null);
+            return new BookInfo("Connection error: Unable to connect to the server.", null, null, null);
         }
         try {
             String query = API_URL + "intitle:" + bookTitle.replace(" ", "+") + "&key=" + API_KEY;
-            URL url = new URL(query);
+            URI uri = new URI(query);
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
-
+    
             BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
             StringBuilder response = new StringBuilder();
             String line;
-
+    
             while ((line = reader.readLine()) != null) {
                 response.append(line);
             }
             reader.close();
-
+    
             JsonObject jsonResponse = JsonParser.parseString(response.toString()).getAsJsonObject();
             JsonArray items = jsonResponse.getAsJsonArray("items");
-
+    
             if (items.size() > 0) {
                 for (int i = 0; i < items.size(); i++) {
                     JsonObject volumeInfo = items.get(i).getAsJsonObject().getAsJsonObject("volumeInfo");
@@ -149,24 +113,84 @@ public class GoogleApiBookController {
                         Double averageRating = volumeInfo.has("averageRating") ? volumeInfo.get("averageRating").getAsDouble() : null;
                         String rating = averageRating != null ? "Average Rating: " + averageRating : "No rating found.";
                         String imageUrl = volumeInfo.has("imageLinks") ? volumeInfo.getAsJsonObject("imageLinks").get("thumbnail").getAsString() : "No image found.";
-                        return new BookInfo(description, rating, imageUrl);
+                        String reviewCount = volumeInfo.has("ratingsCount") ? volumeInfo.get("ratingsCount").getAsString() : "No review count found.";
+                        return new BookInfo(description, rating, imageUrl, reviewCount);
                     }
                 }
-                return new BookInfo("No description found.", null, null);
+                return new BookInfo("No description found.", null, null, null);
             } else {
-                return new BookInfo("No description found.", null, null);
+                return new BookInfo("No description found.", null, null, null);
             }
         } catch (Exception e) {
             e.printStackTrace();
-                return new BookInfo("Error occurred while fetching the book information.", null, null);
+            ErrorDialog.showError("No Results", "Can't find book with that IBSN: "+ e.getMessage(), null);
+            return new BookInfo("Error occurred while fetching the book information.", null, null, null);
+        }
+    }
+        
+
+        
+        public static Document getBookInfoByISBN(String isbn) {
+            if (isbn == null || isbn.trim().isEmpty()) {
+                ErrorDialog.showError("Invalid input", "ISBN is required.", null);
+                return null;
+            }
+            if (!checkConnection()) {
+                ErrorDialog.showError("Connection error", "Unable to connect to the server.", null);
+                return null;
+            }
+            try {
+                String query = API_URL + "isbn:" + isbn + "&key=" + API_KEY;
+                URI uri = new URI(query);
+                URL url = uri.toURL();
+                HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+                connection.setRequestMethod("GET");
+    
+                BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+                StringBuilder response = new StringBuilder();
+                String line;
+    
+                while ((line = reader.readLine()) != null) {
+                    response.append(line);
+                }
+                reader.close();
+    
+                JsonObject jsonResponse = JsonParser.parseString(response.toString()).getAsJsonObject();
+                JsonArray items = jsonResponse.getAsJsonArray("items");
+    
+                if (items.size() > 0) {
+                    JsonObject volumeInfo = items.get(0).getAsJsonObject().getAsJsonObject("volumeInfo");
+                    String title = volumeInfo.get("title").getAsString();
+                    String author = volumeInfo.has("authors") ? volumeInfo.getAsJsonArray("authors").get(0).getAsString() : "Unknown author";
+                    String category = volumeInfo.has("categories") ? volumeInfo.getAsJsonArray("categories").get(0).getAsString() : "Unknown category";
+                    String publisher = volumeInfo.has("publisher") ? volumeInfo.get("publisher").getAsString() : "Unknown publisher";
+                    int yearPublished = volumeInfo.has("publishedDate") ? Integer.parseInt(volumeInfo.get("publishedDate").getAsString().substring(0, 4)) : 0;
+                    int availableCopies = 100; // Assuming 1 copy is available by default
+                   
+                    String description = volumeInfo.has("description") ? volumeInfo.get("description").getAsString() : "No description available";
+                    double averageRating = volumeInfo.has("averageRating") ? volumeInfo.get("averageRating").getAsDouble() : 0.0;
+                    int ratingsCount = volumeInfo.has("ratingsCount") ? volumeInfo.get("ratingsCount").getAsInt() : 0;
+                    String imageUrl = volumeInfo.has("imageLinks") ? volumeInfo.getAsJsonObject("imageLinks").get("thumbnail").getAsString() : "No image available";
+                    
+                Document document = new Document(title, author, category, publisher, yearPublished, availableCopies);
+                document.setDescription(description);
+                document.setRating(averageRating);
+                document.setReviewCount(ratingsCount);
+                document.setCoverImageByUrl(imageUrl);
+                return document;
+                } 
+                else {
+                    ErrorDialog.showError("No Results", "No book information found for the provided ISBN.", null);
+                    return null;
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
+                ErrorDialog.showError("No Results", "Can't find book with that IBSN: "+ e.getMessage(), null);
+                return null;
             }
         }
-        
-
-        
-        
+    }
 
 
-}
 
 
